# paintbot

./: .gitignore  README.md
catkin_ws/: setup.sh
catkin_ws/src/skiros-demo/src/demo_skills/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/skiros-demo/src/demo_skills/launch/: main.launch
catkin_ws/src/skiros-demo/src/demo_skills/owl/: robot_description.owl
catkin_ws/src/skiros-demo/src/demo_skills/src/demo_skills/: demo_primitives.py  demo_skills.py
data/: ang_0_1.csv  ang_0_1.raw  ang_0_2.csv  ang_0_2.raw  ang_0_3.csv  ang_0_3.raw  ang_135_1.csv  ang_135_1.raw  ang_135_2.csv  ang_135_2.raw  ang_135_3.csv  ang_180_1.csv  ang_180_1.raw  ang_180_2.csv  ang_180_2.raw  ang_180_3.csv  ang_225_1.csv  ang_225_1.raw  ang_225_2.csv  ang_225_2.raw  ang_225_3.csv  ang_225_3.raw  ang_270_1.csv  ang_270_1.raw  ang_270_2.csv  ang_270_2.raw  ang_270_3.csv  ang_270_3.raw  ang_315_1.csv  ang_315_1.raw  ang_315_2.csv  ang_315_3.csv  ang_45_1.csv  ang_45_1.raw  ang_45_2.csv  ang_45_2.raw  ang_45_3.csv  ang_90_1.csv  ang_90_1.raw  ang_90_2.csv  (+4 more)
data/raw/: ang_0_3.raw  ang_0_4.raw  ang_135_5.raw  ang_180_1.raw  ang_180_2.raw  ang_180_4.raw  ang_180_5.raw  ang_270_1.raw  ang_270_2.raw  ang_270_3.raw  ang_270_4.raw  ang_270_5.raw  ang_315_5.raw  ang_45_4.raw  ang_45_5.raw  ang_90_2.raw  ang_90_4.raw
report/: project_proposal.tex  proposal.tex  proposal_bibliography.bib  report.tex
report/indin_paper/: bibliography.bib  main.tex
report/report/: bibliography.bib  main.run.xml  main.tex
tools/scene_generator/: paint.py  scene.py  scene_generator.py  util.py  (+2 more)
(+171 files in other folders)
